--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,3 +25,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets: 
+    - lib/assets/images/
+    - lib/assets/icons/
+
+  fonts: 
+  - family: BootstrapIcons
+    fonts: 
+      - asset: lib/assets/icons/bootstrap_icons.ttf
